# EquidadAlgoritmica-SaberXAI

./: .gitignore  Aplicacion_Tesis_TrianaMartinez_a_ICFES.md  contexto_proyecto_para_opus.md  entregables_proyecto.md  planificador.md  pyproject.toml  visualizacion.ipynb
.github/workflows/: ci.yml
bases_datos/: manejo_datos.ipynb  merge_columnas_comunes.py
configs/: default.yaml
documentacion/: decisiones_preparacion_datos.md  documentacion_dataset_icfes.tex  exclusion_2014_1_columnas_comunes.md  feature_selection.md
documentos_soporte/: exclusion_2014_1_columnas_comunes.md
notebooks/: 01_presentacion_datos.ipynb  02_estudio_datos.ipynb  03_preparacion_csv_parquet.ipynb  04_diagnostico_topologico.ipynb
scripts/: train.py
src/data/: data_module.py
src/models/: evaluator.py
src/saber_xai/: config.py
src/saber_xai/data/: __init__.py  data_module.py
src/saber_xai/models/: evaluator.py  mlp_model.py  xgb_model.py
src/utils/: __init__.py  config.py
tests/: test_data.py  test_models.py
