[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saber_xai"
version = "0.1.0"
description = "Predicción del punt_global del ICFES usando XGBoost y PyTorch MLP"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "pyarrow>=12.0.0",
    "fastparquet>=2023.0.0",
    "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "flake8"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v -ra"

[tool.setuptools.packages.find]
where = ["src"]
